--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,7 +1,7 @@
 ---
-title: explore-project-template
+title: Getting started with web development: HTML and CSS
 hero_image: images/banner.png
-description: explore-project-template description
+description: Getting started with web development using HTML and CSS. 
 version: 4
 listed: false
 copyedit: false
