--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
 ---
-title: Getting started with web development: HTML and CSS
+title: "Getting started with web development: HTML and CSS"
 hero_image: images/banner.png
 description: Getting started with web development using HTML and CSS. 
 version: 4
@@ -8,14 +8,15 @@ copyedit: false
 last_tested: '2021-03-26'
 steps:
 - title: Introduction
-- title: Step title
-- title: Step title
-- title: Step title
-- title: Reflection
-  knowledge_quiz:
-    path: quiz1
-    version: 1
-    questions: 3
-    passing_score: 3
-- title: Upgrade your project
-- title: What next?
+- title: What is HTML?
+- title: What is CSS?
+- title: Create your first web page
+- title: Use colour palettes
+- title: Structure your page
+- title: Add fonts and text elements
+- title: Insert images
+- title: Create animation
+- title: Debug your web page
+- title: Useful tips
+- title: Share your web page
+- title: Our web projects
