--- a/en/meta.yml
+++ b/en/meta.yml
@@ -15,7 +15,7 @@ steps:
 - title: Structure your page
 - title: Add fonts and text elements
 - title: Insert images
-- title: Create animation
+- title: Create animations
 - title: Debug your webpage
 - title: Useful tips
 - title: Share your webpage
