--- a/en/code/gswd-example-1/project_config.yml
+++ b/en/code/gswd-example-1/project_config.yml
@@ -1,3 +1,3 @@
-name: 'Getting Started with Web Dev Exampla 1'
+name: 'Getting Started with Web Dev Example 1'
 identifier: 'gswd-example-1'
 type: 'html'
